--- a/src/QuantoGastei.Infra.Database/QuantoGastei.Infra.Database.csproj
+++ b/src/QuantoGastei.Infra.Database/QuantoGastei.Infra.Database.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Dapper" Version="2.0.123" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\QuantoGastei.Infra.Data\QuantoGastei.Infra.Data.csproj" />
+  </ItemGroup>
+
 </Project>
